Common/Init: 프로젝트 생성

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Inavi Route Solution",
+  "name": "Inavi Route Solution",
   "icons": [
     {
       "src": "favicon.ico",
