--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.7",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
